--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
 
            <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://scholar.google.com/citations?user=z8GwuTgAAAAJ&hl=en">Zipeng Qi</a><sup>1</sup>,</span>
+              <a href="https://levir.buaa.edu.cn/">Zipeng Qi</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://scholar.google.ca/citations?user=mV9zdJMAAAAJ&hl=en">Hao Chen</a><sup>1</sup>,</span>
+              <a href="https://levir.buaa.edu.cn/">Hao Chen</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://scholar.google.com/citations?user=3Br8x_gAAAAJ&hl=en&oi=ao">Chenyang Liu</a><sup>1</sup>,
+              <a href="https://levir.buaa.edu.cn/">Chenyang Liu</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://scholar.google.com/citations?user=KtSR8_0AAAAJ&hl=en">Zhenwei Shi</a><sup>1</sup>,
+              <a href="https://levir.buaa.edu.cn/">Zhenwei Shi</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://scholar.google.ca/citations?user=x2wyjkAAAAAJ&hl=en">Zouzheng Xia</a><sup>1</sup>,
+              <a href="https://zhengxiazou.github.io">Zouzheng Xia</a><sup>1</sup>,
             </span>
           </div>
 
