--- a/index.html
+++ b/index.html
@@ -801,8 +801,8 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>
-}</code></pre>
+    <pre><code>xxx
+</code></pre>
   </div>
 </section>
 
