--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <span class="text-dark">Implicit Ray-Transformers</span> for <span class="text-dark">M</span>ulti <span class="text-dark">V</span>iew <span class="text-dark">R</span>emote <span class="text-dark">S</span>ensing <span class="text-dark">I</span>mage <span class="text-dark">S</span>egementation
           </h1>
           <p class="is-size-5 text-center">
-	            Not yet have pushblished
+	            Submittd to "IEEE Transactions on Geoscience and Remote Sensing"
 		      </p>
 
           <!-- <p class="is-size-5 text-center">
@@ -48,11 +48,11 @@
 
            <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://levir.buaa.edu.cn/">Zipeng Qi</a><sup>1</sup>,</span>
+              <a href="https://github.com/qizipeng">Zipeng Qi</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://levir.buaa.edu.cn/">Hao Chen</a><sup>1</sup>,</span>
+              <a href="https://justchenhao.github.io">Hao Chen</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://levir.buaa.edu.cn/">Chenyang Liu</a><sup>1</sup>,
+              <a href="https://github.com/Chen-Yang-Liu">Chenyang Liu</a><sup>1</sup>,
             </span>
             <span class="author-block">
               <a href="https://levir.buaa.edu.cn/">Zhenwei Shi</a><sup>1</sup>,
@@ -108,12 +108,12 @@
           <div class="column has-text-centered">
             <div class="publication-links">
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2211.12254"
+                <a href="https://arxiv.org/abs/2303.08401"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
                   </span>
-                  <span>arXiv (coming soon)</span>
+                  <span>arXiv</span>
                 </a>
               </span>
 <!--               <span class="link-block">-->
@@ -801,7 +801,15 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>xxx
+    <pre><code>@misc{https://doi.org/10.48550/arxiv.2303.08401,
+  doi = {10.48550/ARXIV.2303.08401},
+  url = {https://arxiv.org/abs/2303.08401},
+  author = {Qi, Zipeng and Chen, Hao and Liu, Chenyang and Shi, Zhenwei and Zou, Zhengxia},
+  title = {Implicit Ray-Transformers for Multi-view Remote Sensing Image Segmentation},
+  publisher = {arXiv},
+  year = {2023}
+}
+
 </code></pre>
   </div>
 </section>
