--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="IRT.">
+        content="DiffTalker.">
   <meta name="keywords" content="Diffusion models, Talking faces, Transformers">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>DiffTalker</title>
