--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@ INTERMEDIATE LANDMARKS -->
             mark information and directly use the DeepSpeech features as
             the controllable information (replacing the text prompt), the
             performance of our model (Ours1) significantly deteriorates.
-            This underscores the efficiency of the landmark as additional
+            This underscores the efficiency of the landmark as an additional
             information. Figure 3 showcases the qualitative outcomes obtained
             from our face synthesis network. The illustration highlights
             that the generated faces exhibit a coherent geometric structure
@@ -671,9 +671,6 @@ INTERMEDIATE LANDMARKS -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-full">
         <h2 class="title is-3">Conculution</h2>
-        <div class="content">
-          <img src="my_data/face_synthesis.png" width="60%"/>
-        </div>
         </br>
         <div class="content has-text-justified">
           <p>
