--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ INTERMEDIATE LANDMARKS -->
       <div class="column is-full">
         <h2 class="title is-3">Method</h2>
         <div class="content">
-          <img src="my_data/overview4.pdf" width="100%"/>
+          <img src="my_data/overview4.png" width="100%"/>
         </div>
         </br>
         <div class="content has-text-justified">
